Corrected scrollbar position and format to align with 'About' and other fly-outs.

--- a/static/css/panel.styl
+++ b/static/css/panel.styl
@@ -334,10 +334,7 @@ span.tabclose.btn-default:hover
   color white
 
 #preferenceProperties
-  width inherit !important
-  margin 0 -15px 0 -15px
-  a
-    border none
+  width auto !important
 
 #toolbar li
   text-align center
